# provability-fabric-core

./: .gitignore  Makefile  README.md
.github/workflows/: adapters-ci.yml  pf-core-e2e.yml  pf-core-trusted.yml
adapters/pcs/: normalize_release.py
adapters/post_incident_proofs/: README.md  smoke_test.sh
adapters/provability-fabric/: README.md  export_catalog.py
docs/pf-core/: README.md  acceptance.md  assumptions.md  claim-boundary.md  ecosystem-inventory.md  external-audit-brief.md  extraction-log.md  mission.md  phase7-cross-repo-verification.md  phase7-handoff.md  phase7-pcs-checklist.md  phase7-pip-checklist.md  phase7-provability-fabric-checklist.md  phase7-status.md  policy-extraction-map.md  release-checklist.md  trusted-boundary.md  tutorial.md
pf-core/docs/: adapter-contract.md  certificate-semantics.md  examples.md  formal-model.md  pf-core-trace-mapping.md  runtime-mapping.md  schema-map.md  theorem-map.md  threat-model.md  trusted-rings.md
pf-core/lean/: PFCore.lean  (+2 more)
pf-core/validator/: README.md  pyproject.toml  setup.py
pf-core/validator/pf_core/: __init__.py  __main__.py  audit.py  audit_line.py  bundle_verify.py  cli.py  compile.py  contracts.py  deciders.py  emitter.py  errors.py  event_kind.py  hash_chain.py  schemas.py
pf-core/validator/tests/: test_audit.py  test_audit_line.py  test_bundle_verify.py  test_compile.py  test_deciders.py  test_emit_artifacts.py  test_emitter.py  test_hash_chain.py  test_lean_replay_scope.py
scripts/: phase7-cross-repo-smoke.ps1  phase7-cross-repo-smoke.sh  phase7-parent-probe.ps1  phase7-parent-probe.sh
(+125 files in other folders)
