[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pf-core-validator"
version = "0.1.0"
description = "PF-Core runtime validator and trace compiler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.21.0",
  "referencing>=0.35.0",
]

[project.scripts]
pf = "pf_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pf_core*"]
